# CodeWeaver

./: .gitignore  README.md  README_RALPH_LOOP.md  debug_llm_response.py  pyproject.toml  test_optimizer_workflow.py  test_workflow_execution.py  verify_agent_gen.py
.claude/: ralph-loop.local.md  settings.local.json
codeweaver/: cli.py  llm.py
docs/: RALPH_LOOP_COMPLETE.md  design.md  (+15 more)
mdflow/: README.md  cli.py  example_e2e.py  example_simple_e2e.py  example_structured_e2e.py  pyproject.toml  requirements.txt  test_cli.py  test_e2e_generation.py  test_final.py  test_intent_parser.py  test_llm_with_postprocessor.py  test_performance.py  test_post_processor.py  test_real_llm.py  test_rigorous.py  test_strict_format.py  test_validation.py  test_workflow_generator.py
mdflow/agents/: code_fixer.md  code_reviewer.md
mdflow/core/: __init__.py  builder.py  cache.py  compiler.py  config.py  logging_config.py  lru_cache.py  memory.py  models.py  parser.py  post_processor.py  real_compiler.py  structured_compiler.py  structured_memory.py  tools.py  validation.py
mdflow/docs/: complete_summary.md  completion_summary.md  development_complete.md  e2e_results.md  final_project_report.md  final_report.md  integration_complete.md  optimization_analysis.md  phase3_plan.md  progress_summary.md  project_summary.md  step3_summary.md  structured_memory_update.md
mdflow/docs/plans/: 2026-03-04-memory-redesign-design.md  2026-03-04-workflow-generation-design.md
mdflow/memory/: code_reviewer_log.txt
mdflow/tests/: __init__.py  test_builder.py  test_compiler.py  test_execution.py  test_parser.py  test_structured_compiler.py  test_structured_memory.py  test_workflow_generation.py
mdflow/workflows/: code_review.md
mdflow/workflows/code_optimization/: config.yaml  flow.md
mdflow/workflows/code_optimization/agents/: interactor.md  optimizer.md  validator.md
mdflow/workflows/code_optimization/memory/: checkpoint_demo_session_001.json
mdflow/workflows/code_optimization/memory/long_term/: system_meta.md
mdflow/workflows/code_optimization/memory/long_term/details/: arch_001.md
mdflow/workflows/code_optimization/memory/medium_term/: task_logs.jsonl  task_logs.md
mdflow/workflows/code_optimization/memory/ultra_short/: validator_context.md
mdflow/workflows/code_optimization/tools/: bash_executor.md
mdflow/workflows/workflow_generator/: flow.md
mdflow/workflows/workflow_generator/agents/: agent_builder.md  intent_parser.md  skeleton_builder.md
(+66 files in other folders)
